--- a/src/css/components/_catalog-forms.scss
+++ b/src/css/components/_catalog-forms.scss
@@ -395,6 +395,6 @@
   }
 
   .qds-ui .q-popup-edit.q-popup-edit .q-popup-edit__buttons .q-btn + .q-btn {
-    margin-left: 0;
+    margin-inline-start: 0;
   }
 }
