--- a/src/tokens/_default.scss
+++ b/src/tokens/_default.scss
@@ -52,10 +52,10 @@ $dark-text: (
 ) !default;
 
 $borders: (
-  light: #d1d1d1,
-  subtle: #e0e0e0,
-  dark: #4c5666,
-  dark-subtle: #323844,
+  light: #8f8f8f,
+  subtle: #b5b5b5,
+  dark: #6a7a8e,
+  dark-subtle: #576173,
 ) !default;
 
 $space: (
